--- a/Frontend/app/index.html
+++ b/Frontend/app/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <div class="pusher" id="app"></div>
+    <div id="app"></div>
     <script src="bundle.js"></script>
 </body>
 
